...
				cell.titleLabel.text = "Use Social"
				cell.descriptionLabel.text = "Sign in with your preferred social account"
				
			case 1:
				cell.iconView.image = UIImage(named: "WalletRestore")
				cell.titleLabel.text = "Restore with a Recovery Phrase"
				cell.descriptionLabel.text = "Import accounts using your recovery phrase from Kukai or another wallet"
				
			case 2:
				cell.iconView.image = UIImage(named: "WalletHD")
				cell.titleLabel.text = "Import a Private Key"
				cell.descriptionLabel.text = "Import a wallet from a private key"
			
			case 3:
				cell.iconView.image = UIImage(named: "WalletLedger")
				cell.titleLabel.text = "Connect with Ledger"
				cell.descriptionLabel.text = "Add accounts from your Bluetooth hardware wallet"
				
			case 4:
				cell.iconView.image = UIImage(named: "WalletWatch")
				cell.titleLabel.text = "Watch a Tezos Address"
				cell.descriptionLabel.text = "Watch a public address or .tez domain"
				
			default:
				cell.iconView.image = UIImage()
				cell.titleLabel.text = ""
				cell.descriptionLabel.text = ""
...
