...
		if presentedCopyAlert {
			return
		} else {
			presentedCopyAlert = true
		}
		
		self.alert(withTitle: "Copy?",
				   andMessage: "Do you want to copy the recovery phrase?  This phrase gives anyone access to your wallet and funds, copying it to your system clipboard may expose these words to other apps",
				   okText: "Copy",
				   okStyle: .destructive,
				   okAction: { [weak self] action in
			
			if let address = DependencyManager.shared.selectedWalletAddress, let mnemonic = (WalletCacheService().fetchWallet(forAddress: address) as? HDWallet)?.mnemonic {
				UIPasteboard.general.string = mnemonic.words.joined(separator: " ")
			}
...
